# go-enry-go-enry

./: .gitignore  Makefile  README.md  classifier.go  common_test.go
.github/workflows/: goTest.yml  pyTest.yml  python-wheels.yml
data/: colors.go  commit.go  id.go  languageInfo.go  type.go  vendor.go
internal/code-generator/generator/: generator_test.go
internal/code-generator/generator/test_files/: alias.gold  content.gold  documentation.gold  extension.gold  filename.gold  groups.gold  interpreter.gold  mimeType.gold
python/: MANIFEST.in  README.md  build_enry.py  enry.py  pyproject.toml  requirements.ci.txt  requirements.dev.txt  requirements.txt  setup.py
python/enry/: __init__.py  definitions.py  utils.py
python/tests/: test_enry.py  test_memory.py
shared/: enry.go
